# cookiecutter-nslab-basic

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: README.md
{{ cookiecutter.project_name }}/tests/: test_import.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  LICENSE  pyproject.toml
